# themis-trace

./: .gitignore  LICENSE  README.md  pyproject.toml
__handlers__/libc_2.31.so/: accept.js  bind.js  chdir.js  closedir.js  connect.js  copy_file_range.js  creat.js  dirfd.js  dup.js  dup2.js  fchdir.js  fclose.js  fcloseall.js  fcntl.js  fdopendir.js  fgetc.js  fgetc_unlocked.js  fgets.js  fgets_unlocked.js  fgetwc.js  fgetwc_unlocked.js  fgetws.js  fgetws_unlocked.js  fopen.js  fprintf.js  fputc.js  fputc_unlocked.js  fputs.js  fputs_unlocked.js  fputwc.js  fputwc_unlocked.js  fputws.js  fputws_unlocked.js  fread.js  fread_unlocked.js  fscanf.js  fwprintf.js  fwrite.js  fwrite_unlocked.js  fwscanf.js  (+77 more)
__handlers__/libpthread_2.31.so/: close.js  msync.js  open64.js  pread.js  recv.js  recvfrom.js
archaic/: main.py
archaic/common/: config.py
archaic/trace_conf/: libc_i_o.txt
archaic/tracing/: filter.py  frida_trace_wrap.py  tracer.py
src/: config.toml  main.py
src/common/: config.py
src/tracing/: frida_trace_wrap.py  tracer.py
