[tool.poetry]
name = "themis-trace"
version = "0.1.0"
description = ""
authors = ["Adam Ruman"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
frida = "^15.1.16"
frida-tools = "^10.5.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
